--- a/templates/optimizer.html
+++ b/templates/optimizer.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/menu.css') }}">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/optimizer.css') }}"/>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/optimizer-dark.css') }}"/>
 </head>
 <body>
 
