--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -95,13 +95,13 @@
     position: absolute;
     top: 25px;
     transform: translateY(-50%);
-    right: -12px;
+    right: -7px;
     width: 24px;
     height: 24px;
     background: var(--accent-color);
     border: 2px solid var(--bg-primary);
     border-radius: 50%;
-    color: white;
+    color: red;
     font-size: 12px;
     display: flex;
     align-items: center;
