--- a/static/css/main/carousel.css
+++ b/static/css/main/carousel.css
@@ -78,7 +78,7 @@
 }
 
 .carousel-item .movie-thumb {
-    height: 240px;
+    height: 10em;
     border-bottom: 2px solid transparent;
     transition: border-color 0.3s ease;
 }
