--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <!-- Estilos principales -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main/main.css') }}?v={{ range(1, 10000) | random }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/menu.css') }}?v={{ range(1, 10000) | random }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/menu/menu.css') }}?v={{ range(1, 10000) | random }}">
 </head>
 
 <body class="dark-mode">
