Mejoras en seguridad

--- a/templates/play.html
+++ b/templates/play.html
@@ -48,7 +48,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Reproduciendo: {{ sanitized_name }}</h1>
+        <h1>{{ sanitized_name }}</h1>
         <div class="underline"></div>
         <video controls>
             <source src="/stream/{{ filename }}" type="video/mp4">
