--- a/static/css/menu/hamburger.css
+++ b/static/css/menu/hamburger.css
@@ -3,7 +3,7 @@
     display: none;
     position: fixed;
     top: 16px;
-    left: 16px;
+    right: 16px;
     z-index: 1001;
     background: var(--accent-color);
     color: white;
