se arregla el titulo de la seccion de peliculas

--- a/templates/index.html
+++ b/templates/index.html
@@ -92,7 +92,7 @@
             </div>
 
             <!-- El JS insertará aquí las categorías en carruseles -->
-            <div id="movies" class="categories-container"></div>
+            <div id="moviesContainer" class="categories-container"></div>
         </section>
 
         <!-- ========================= -->
